# TiledCompressor

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  Prompt.txt  QUICKSTART.md  README.md  THIRD_PARTY_LICENSES.md  build.bat  build.sh  configure-cmake.ps1  setup-vcpkg.ps1
.github/: FUNDING.yml
src/: FileDialog.cpp  FileDialog.h  MapConverter.cpp  MapConverter.h  SDL_compat.h  TilesetCompressor.cpp  TilesetCompressor.h  main.cpp
